# AI-Resume-Analyzer

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_resume.docx
backend/data/: skill_graph_data.json  templates.json
backend/routers/: analyse.py  chat.py  generate.py  roadmap.py
backend/scratch/: generate_test_resume.py  test_parser.py  trigger_analyse.py  trigger_chat.py  trigger_generate.py  trigger_roadmap.py
backend/services/: gap_analyzer.py  jd_parser.py  llm_client.py  project_suggester.py  resume_generator.py  resume_optimizer.py  resume_parser.py  roadmap_engine.py  scoring_engine.py  skill_extractor.py  skill_graph.py
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AnalysisLoader.jsx  ChatAssistant.jsx  RoadmapPopup.jsx  StepIndicator.jsx
frontend/src/pages/: AnalyseStep.jsx  GenerateStep.jsx  ReviewStep.jsx  ScoreDownloadStep.jsx  SuggestionCartStep.jsx  UploadStep.jsx
frontend/src/store/: useAppStore.js
