[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "resume-agent-backend"
version = "1.0.0"
description = "AI Career Alignment Agent - Intelligent resume analysis and career roadmap engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.2",
    "google-generativeai>=0.8.0",
]
